fix placeholders being registered after title, fix first line getting skipped